--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 *.dll
 *.so
 *.dylib
+tus-vra-uploader
+tus-vra-uploader-darwin
+tus-vra-uploader.exe
 
 # Test binary, built with `go test -c`
 *.test
@@ -11,5 +14,5 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Dependency directories
+vendor/
